fixed endorsed dir's for sample server for unix scripts and updated the config language doc
git-svn-id: https://svn.eu.apache.org/repos/asf/webservices/synapse/trunk/java@509251 13f79535-47bb-0310-9956-ffa450edef68